--- a/finalproject.css
+++ b/finalproject.css
@@ -131,17 +131,17 @@ figure.birdsonbranch img {
 }
 
 figure.CirceDustJacket img {
-  max-width: 45%
+  max-width: 45%;
   height: auto;
 }
 
 .KavClayDustJacket img {
-  max-width: 55%
+  max-width: 55%;
   height: auto;
 }
 
 .LessonsDustJacket img {
-  max-width: 40%
+  max-width: 40%;
   height: auto;
 }
 
